--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game</title>
 </head>
-<body>
-    
+<body id="body">
+    <div id="div">Plane</div>
+    <button id="plane">Plane</button>
 </body>
+<script src="script.js"></script>
+<link rel="stylesheet" href="style.css">
 </html>
