--- a/MainMenu.html
+++ b/MainMenu.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game</title>
+    <title>Main Page</title>
 </head>
-<body id="body">
+<body>
     <div id='title'>Flying Plane:)</div>
     <div id="grass"></div>  
-    <div id="plane"></div>
-    <div id="grass"></div>
 </body>
-<script src="script.js"></script>
-<link rel="stylesheet" href="style.css">    
+<script src="MainMenu.js"></script>
+<link rel="stylesheet" href="MainMenu.css">
 </html>
