--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game</title>
 </head>
-<body id="body">
+<body>
     <div id='title'>Flying Plane:)</div>
     <div id="grass"></div>  
     <div id="plane"></div>
