--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 </head>
 <body>
     <div id='title'>Flying Plane:)</div>
-    <div id="grass"></div>  
-    <div id="plane"></div>
-    <div id="grass"></div>
+    <button id="start">Start Game</button>
+    <div id="grass"></div>      
 </body>
 <script src="script.js"></script>
 <link rel="stylesheet" href="style.css">
