Fixed some stuff

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <div id='title'>Flying Plane:)</div>
     <button id="start">Start Game</button>
-    <div id="grass"></div>      
+    <div id="grass"></div>
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
 </body>
-<script src="script.js"></script>
-<link rel="stylesheet" href="style.css">
+</html>
