Pipes Fixed Finally

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Game</title>
 </head>
 <body>
-    <div id='title'>Flying Blahaj:)</div>
+    <div id='title'>Don't crash:)</div>
     <button id="start">Start Game</button>
     <div id="grass"></div>
     <script src="script.js"></script>
