a few more patches and it shld be done

--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game</title>
+    <title>Flappy Birds but cooler</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id='title'>Don't crash:)</div>
+    <div id='title'>Fly the box</div>
+    <div id='Rules'>Rules</div>
+    <p id="rule">You will play as a black square and you will have to manoeuvre around</p>
     <button id="start">Start Game</button>
     <div id="grass"></div>
     <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
 </body>
 </html>
