--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p id="rule1" class='rule'>You will play as a black square and</p>
     <p id="rule2" class='rule'>you will have to manoeuvre around</p>
     <p id="rule3" class="rule">obstacles and try to survive as long</p>
-    <p id="rule4">you can. Good luck!</p>
+    <p id="rule4">as you can. Good luck!</p>
     <button id="start">Start Game</button>
     <div id="grass"></div>
     <script src="script.js"></script>
